# CG-RayTracing

./: .gitignore  CMakeLists.txt  README.md
src/: AABB.cpp  BezierCurve.cpp  Bitmap.cpp  Camera.cpp  DiffuseMaterial.cpp  GlassMaterial.cpp  HitPointHost.cpp  Mesh.cpp  MeshGeometry.cpp  MeshIntersectOptimiser.cpp  MirrorMaterial.cpp  Object.cpp  PointLight.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Square.cpp  SquareLight.cpp  Triangle.cpp  WeightTexturedMaterial.cpp  main.cpp
src/headers/: AABB.h  BezierCurve.h  Bitmap.h  Camera.h  DiffuseMaterial.h  Geometry.h  GlassMaterial.h  HitPointHost.h  KDTree.hpp  Light.h  Material.h  Matrix4.h  Mesh.h  MeshGeometry.h  MeshIntersectOptimiser.h  MirrorMaterial.h  Object.h  PointLight.h  Quaternion.h  Ray.h  Renderer.h  RunTask.hpp  Scene.h  Sphere.h  Square.h  SquareLight.h  Transform.h  Triangle.h  Util.h  Vector3.h  WeightTexturedMaterial.h
